@@ -13,14 +13,12 @@
 #include "EGUIElementTypes.h"
 #include "EGUIAlignment.h"
 #include "IAttributes.h"
+#include "IGUIEnvironment.h"
 
 namespace irr
 {
 namespace gui
 {
-
-class IGUIEnvironment;
-
 //! Base class of all GUI elements.
 class IGUIElement : public virtual io::IAttributeExchangingObject, public IEventReceiver
 {
@@ -56,6 +54,7 @@ public:
 		core::list<IGUIElement*>::Iterator it = Children.begin();
 		for (; it != Children.end(); ++it)
 		{
+			(*it)->sendRemoveEvent();
 			(*it)->Parent = 0;
 			(*it)->drop();
 		}
@@ -67,7 +66,6 @@ public:
 	{
 		return Parent;
 	}
-
 
 	//! Returns the relative rectangle of this element.
 	core::rect<s32> getRelativePosition() const
@@ -292,6 +290,7 @@ public:
 		for (; it != Children.end(); ++it)
 			if ((*it) == child)
 			{
+				(*it)->sendRemoveEvent();
 				(*it)->Parent = 0;
 				(*it)->drop();
 				Children.erase(it);
@@ -963,6 +962,21 @@ protected:
 			{
 				(*it)->recalculateAbsolutePosition(recursive);
 			}
+		}
+	}
+
+	// Inform gui-environment that an element got removed from the gui-graph
+	void sendRemoveEvent()
+	{
+		if ( Environment )
+		{
+			SEvent removeEvent;
+			removeEvent.EventType = EET_GUI_EVENT;
+			removeEvent.GUIEvent.Caller = this;
+			removeEvent.GUIEvent.Element = 0;
+			removeEvent.GUIEvent.EventType = EGET_ELEMENT_REMOVED;
+
+			Environment->postEventFromUser(removeEvent);
 		}
 	}
 
